@@ -262,6 +262,9 @@ public class Apt
      */
     public void execute()
             throws BuildException {
+        if (JavaEnvUtils.getJavaVersionNumber() >= 18) {
+           throw new BuildException("apt does not exist under Java 1.8 and higher");
+        }
         super.execute();
     }
 }
